syntax = "proto3";

package kumactl.config.v1alpha1;

option go_package = "v1alpha1";

import "validate/validate.proto";

// Configuration defines configuration of `kumactl`.
message Configuration {

  // List of known Control Planes.
  repeated ControlPlane control_planes = 1;

  // List of configured `kumactl` contexts.
  repeated Context contexts = 2;

  // Name of the context to use by default.
  string current_context = 3;
}

// ControlPlane defines a Control Plane.
message ControlPlane {

  // Name defines a reference name for a given Control Plane.
  string name = 1 [ (validate.rules).string.min_len = 1 ];

  // Coordinates defines coordinates of a given Control Plane.
  ControlPlaneCoordinates coordinates = 2
      [ (validate.rules).message.required = true ];
}

// ControlPlaneCoordinates defines coordinates of a Control Plane.
message ControlPlaneCoordinates {
  message ApiServer {

    // URL defines URL of the Control Plane API Server.
    string url = 1 [ (validate.rules).string.uri = true ];
  }

  ApiServer api_server = 1 [ (validate.rules).message.required = true ];
}

// Context defines a context in which individual `kumactl` commands run.
message Context {

  // Name defines a reference name for a given context.
  string name = 1 [ (validate.rules).string.min_len = 1 ];

  // ControlPlane defines a reference to a known Control Plane.
  string control_plane = 2 [ (validate.rules).string.min_len = 1 ];

  // Defaults defines default settings for a context.
  message Defaults {

    // Mesh defines a Mesh to use in requests if one is not provided explicitly.
    string mesh = 1;
  }

  // Defaults defines default settings for a given context.
  Defaults defaults = 3;

  Credentials credentials = 4;

  // Credentials defines credentials for various APIs
  message Credentials {
    // AdminApiCredentials defines credentials for admin client
    AdminApiCredentials adminApi = 1;
  }

  // AdminApiCredentials defines credential configuration of admin client
  message AdminApiCredentials {

    // ClientCert defines certificate of authorized client of admin server
    string client_cert = 2;

    // ClientKey defines key of authorized client of admin server
    string client_key = 3;
  }
}
